--- a/house.html
+++ b/house.html
@@ -4,9 +4,152 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>房屋資訊</title>
+
+    <link rel="stylesheet" type="text/css" href="css/common.css">
+    <link rel="stylesheet" type="text/css" href="css/house.css">
 </head>
 <body>
+    <header>
+        <nav id="nav" class="nav">
+        </nav>
+    </header>
+    <div id="house" class="house">
+        <div id="houseLeft" class="house_left">
+            <div id="houseImgContainer" class="house_img_container">
+            </div>
+            <div id="houseRequireContainer" class="house_require_container">
+                <div id="houseRequireRow0" class="house_require_row">
+                    <p id="houseRequireTitle" class="house_require_title">押金</p><b>：</b>
+                    <p id="houseRequireDeposit" class="house_require_detail">二個月</p>
+                </div>
+                <div id="houseRequireRow1" class="house_require_row">
+                    <p id="houseRequireTitle" class="house_require_title">最短租期</p><b>：</b>
+                    <p id="houseRequireDeposit" class="house_require_detail">半年</p>
+                </div>
+                <div id="houseRequireRow2" class="house_require_row">
+                    <p id="houseRequireTitle" class="house_require_title">開伙</p><b>：</b>
+                    <p id="houseRequireDeposit" class="house_require_detail">可以</p>
+                </div>
+                <div id="houseRequireRow3" class="house_require_row">
+                    <p id="houseRequireTitle" class="house_require_title">養寵物</p><b>：</b>
+                    <p id="houseRequireDeposit" class="house_require_detail">不可以</p>
+                </div>
+                <div id="houseRequireRow4" class="house_require_row">
+                    <p id="houseRequireTitle" class="house_require_title">身分要求</p><b>：</b>
+                    <p id="houseRequireDeposit" class="house_require_detail">學生、上班族</p>
+                </div>
+                <div id="houseRequireRow5" class="house_require_row">
+                    <p id="houseRequireTitle" class="house_require_title">性別要求</p><b>：</b>
+                    <p id="houseRequireDeposit" class="house_require_detail">限女性</p>
+                </div>
+            </div>
+            <div id="houseDeviceContainer" class="house_device_container">
+                <p class="house_device_title">房東提供</p>
+                <div id="houseDeviceRow0" class="house_device_row">
+                    <div id="houseDeviceImg" class="house_device_img"></div>
+                    <p id="housedeviceTable" class="house_device">桌子</p>
+                </div>
+                <div id="houseDeviceRow0" class="house_device_row">
+                    <div id="houseDeviceImg" class="house_device_img"></div>
+                    <p id="housedeviceChair" class="house_device">椅子</p>
+                </div>
+                <div id="houseDeviceRow0" class="house_device_row">
+                    <div id="houseDeviceImg" class="house_device_img"></div>
+                    <p id="housedeviceCloset" class="house_device">衣櫃</p>
+                </div>
+                <div id="houseDeviceRow0" class="house_device_row">
+                    <div id="houseDeviceImg" class="house_device_img"></div>
+                    <p id="housedeviceBed" class="house_device">床</p>
+                </div>
+                <div id="houseDeviceRow0" class="house_device_row">
+                    <div id="houseDeviceImg" class="house_device_img"></div>
+                    <p id="housedeviceSofa" class="house_device">沙發</p>
+                </div>
+                <div id="houseDeviceRow0" class="house_device_row">
+                    <div id="houseDeviceImg" class="house_device_img"></div>
+                    <p id="housedeviceHeater" class="house_device">熱水器</p>
+                </div>
+                <div id="houseDeviceRow0" class="house_device_row">
+                    <div id="houseDeviceImg" class="house_device_img"></div>
+                    <p id="housedeviceTv" class="house_device">電視</p>
+                </div>
+                <div id="houseDeviceRow0" class="house_device_row">
+                    <div id="houseDeviceImg" class="house_device_img"></div>
+                    <p id="housedeviceFridge" class="house_device">冰箱</p>
+                </div>
+                <div id="houseDeviceRow0" class="house_device_row">
+                    <div id="houseDeviceImg" class="house_device_img"></div>
+                    <p id="housedeviceAc" class="house_device">冷氣</p>
+                </div>
+                <div id="houseDeviceRow0" class="house_device_row">
+                    <div id="houseDeviceImg" class="house_device_img"></div>
+                    <p id="housedeviceWashMachine" class="house_device">洗衣機</p>
+                </div>
+                <div id="houseDeviceRow0" class="house_device_row">
+                    <div id="houseDeviceImg" class="house_device_img"></div>
+                    <p id="housedeviceInternet" class="house_device">網路</p>
+                </div>
+                <div id="houseDeviceRow0" class="house_device_row">
+                    <div id="houseDeviceImg" class="house_device_img"></div>
+                    <p id="housedeviceCable" class="house_device">第四台</p>
+                </div>
+            </div>
+            <div id="houseSurroundingContainer" class="house_surrounding_container">
+                <p id="houseSurroundingTitle" class="house_surrounding_title">生活交通</p>
+                <p>生活機能：近便利商店；傳統市場；公園綠地；學校；醫療</p>
+                <p>附近交通：近公館公車站； 公館捷運站</p>
+            </div>
+            <div id="houseDetailContainer" class="house_detail_container">
+                <p id="houseDetailTitle" class="house_detail_title">屋況說明</p>
+                <p>生活機能：近便利商店；傳統市場；公園綠地；學校；醫療</p>
+                <p>附近交通：近公館公車站； 公館捷運站</p>
+            </div>
+            <div id="houseQuestionContainer" class="house_question_container">
+                <p id="houseQuestionTitle" class="house_question_title">房屋問答</p>
+                <div id="houseQuestionRow" class="house_question_row">
+                    <p id="houseQuestion" class="house_question">請問...</p>
+                    <p id="houseAnswer" class="house_answer">因為...</p>
+                </div>
+            </div>
+            <div id="houseAskContainer" class="house_ask_container">
+                <p id="houseAskTitle" class="house_ask_title">我要提問</p>
+                <textarea id="houseAsk" class="house_ask"></textarea>
+                <p id="houseAskBtn" class="house_ask_btn">確認送出</p>
+            </div>
+        </div>
+        <div id="houseRight" class="house_right">
+            <div id="houseInfoContainer" class="house_info_container">
+                <div id="housePriceContainer" class="house_price_container">
+                    <span id="housePrice" class="house_price">10,200</span>
+                    <b>元/月</b>
+                    <p id="housePriceInclude" class="house_price_include">含網路/水費</p>
+                </div>
+                <ul id="houseInfoLists" class="house_info_lists">
+                    <li id="houseInfo0" class="house_info">坪數：7坪</li>
+                    <li id="houseInfo1" class="house_info">樓層：4F/5F</li>
+                    <li id="houseInfo2" class="house_info">房間：1間</li>
+                    <li id="houseInfo3" class="house_info">廁所：2間</li>
+                    <li id="houseInfo4" class="house_info">類型：獨立套房</li>
+                </ul>
+            </div>
+            <div id="ownerContainer" class="owner_info_container">
+                <div id="owner" class="owner">
+                    <div id="ownerPhoto" class="owner_photo"></div>
+                    <p id="ownerName" class="owner_name">陳先生</p>
+                </div>
+                <div id="ownerPhoneContainer" class="owner_phone_container">
+                    <div id="ownerPhoneImg" class="owner_phone_img"></div>
+                    <p id="ownerPhone" class="owner_phone">0919-957-281</p>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </body>
+<footer>
+    <script src="./js/lib.js"></script>
+    <script src="./js/common.js"></script>
+    <script src="./js/house.js"></script>
+</footer>
 </html>
