--- a/member.html
+++ b/member.html
@@ -5,8 +5,88 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+
+    <link rel="stylesheet" type="text/css" href="css/common.css">
+    <link rel="stylesheet" type="text/css" href="css/member.css">
 </head>
 <body>
-    
+    <header>
+        <nav id="nav" class="nav">
+        </nav>
+    </header>
+    <div id="memberPoster" class="member_poster">
+        <p>會員中心</p>
+    </div>
+    <section id="member" class="member">
+        <div id="memberBar" class="member_bar">
+            <p id="memberDataBtn" class="member_bar_btn">基本資料</p>
+            <p id="favHouseBtn" class="member_bar_btn">我的最愛</p>
+            <p id="myHouseBtn" class="member_bar_btn">我的刊登</p>
+            <p id="logOut" class="member_bar_btn">登出</p>
+        </div>
+        <div id="memberDisplay" class="member_display">
+<!--
+            <div id="memberData" class="member_data">
+                <div id="memberPhoto" class="member_photo">
+                </div>
+                <div id="memberDataRow" class="member_data_row">
+                    <p class="member_data_title">ID</p>
+                    <input id="memberId" class="member_input">
+                </div>
+                <div id="memberDataRow" class="member_data_row">
+                    <p class="member_data_title">姓名</p>
+                    <input id="memberName" class="member_input">
+                </div>
+                <div id="memberDataRow" class="member_data_row">
+                    <p class="member_data_title">手機</p>
+                    <input id="memberPhone" class="member_input">
+                </div>
+                <div id="memberDataRow" class="member_data_row">
+                    <p class="member_data_title">信箱</p>
+                    <input id="memberMail" class="member_input">
+                </div>
+                <p id="memberModifyBtn" class="member_modify_btn">修改資料</p>
+            </div>
+-->
+            <div id="memberFavHouse" class="member_fav_house">
+                <div id="favHouse" class="fav_house">
+                    <div id="houseImg" class="house_img"></div>
+                    <div id="houseDetail" class="house_detail">
+                        <p id="price" class="price">36,858</p>
+                        <p id="room">一間房間、一間廁所</p>
+                        <p id="sectionName" class="section_name">大安區</p>
+                    </div>
+                </div>
+                <div id="favHouse" class="fav_house">
+                    <div id="houseImg" class="house_img"></div>
+                    <div id="houseDetail" class="house_detail">
+                        <p id="price" class="price">36,858</p>
+                        <p id="room">一間房間、一間廁所</p>
+                        <p id="sectionName" class="section_name">大安區</p>
+                    </div>
+                </div>
+                <div id="favHouse" class="fav_house">
+                    <div id="houseImg" class="house_img"></div>
+                    <div id="houseDetail" class="house_detail">
+                        <p id="price" class="price">36,858</p>
+                        <p id="room">一間房間、一間廁所</p>
+                        <p id="sectionName" class="section_name">大安區</p>
+                    </div>
+                </div>
+                <div id="favHouse" class="fav_house">
+                    <div id="houseImg" class="house_img"></div>
+                    <div id="houseDetail" class="house_detail">
+                        <p id="price" class="price">36,858</p>
+                        <p id="room">一間房間、一間廁所</p>
+                        <p id="sectionName" class="section_name">大安區</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
+<footer>
+    <script src="js/lib.js"></script>
+    <script src="js/common.js"></script>
+</footer>
 </html>
