--- a/house.html
+++ b/house.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/common.css">
     <link rel="stylesheet" type="text/css" href="css/house.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 <body>
     <header>
@@ -147,9 +148,10 @@
     </div>
     
 </body>
-<footer>
+<footer id="footer" class="footer">
+    
+</footer>
     <script src="./js/lib.js"></script>
     <script src="./js/common.js"></script>
     <script src="./js/house.js"></script>
-</footer>
 </html>
