--- a/house.html
+++ b/house.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/house.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
-<body>
+<body id="body">
     <header>
         <nav id="nav" class="nav">
         </nav>
