--- a/rental.html
+++ b/rental.html
@@ -8,16 +8,15 @@
 
     
     <link rel="stylesheet" type="text/css" href="css/common.css">
+    <link rel="stylesheet" type="text/css" href="css/login.css">
     <link rel="stylesheet" type="text/css" href="css/rental.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     
-    <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-database.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase-storage.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase.js"></script>
 
     <script src="./js/firebase.js"></script>
 </head>
-<body>
+<body id="body">
     <header>
         <nav id="nav" class="nav">
         </nav>
@@ -94,6 +93,7 @@
 </footer>
     <script src="./js/lib.js"></script>
     <script src="./js/common.js"></script>
+    <script src="./js/login.js"></script>
     <script src="./js/rental.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCO1V4ilzKx8wxo6fJ0QgIskky6lcUUhSc&callback=initMap"
     async defer></script>
