--- a/member.html
+++ b/member.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 
     <link rel="stylesheet" type="text/css" href="css/common.css">
+    <link rel="stylesheet" type="text/css" href="css/login.css">
     <link rel="stylesheet" type="text/css" href="css/member.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     
@@ -28,7 +29,8 @@
             <p id="myHouseBtn" class="member_bar_btn">我的刊登</p>
             <p id="logOut" class="member_bar_btn">登出</p>
         </div>
-        <div id="memberDisplay" class="member_display">
+<!--        <div id="memberDisplay" class="member_display">-->
+<!--
             <div id="memberData" class="member_data">
                 <div id="memberPhoto" class="member_photo">
                 </div>
@@ -50,6 +52,8 @@
                 </div>
                 <p id="memberModifyBtn" class="member_modify_btn">修改資料</p>
             </div>
+-->
+<!--
             <div id="memberFavHouse" class="member_fav_house">
                 <div id="favHouse" class="fav_house">
                     <div id="houseImg" class="house_img"></div>
@@ -84,7 +88,8 @@
                     </div>
                 </div>
             </div>
-        </div>
+-->
+<!--        </div>-->
     </section>
 </body>
 <footer id="footer" class="footer">
@@ -92,5 +97,6 @@
 </footer>
     <script src="js/lib.js"></script>
     <script src="js/common.js"></script>
+    <script src="js/login.js"></script>
     <script src="js/member.js"></script>
 </html>
