--- a/edit.html
+++ b/edit.html
@@ -221,4 +221,5 @@
     <script src="js/common.js"></script>
     <script src="js/login.js"></script>
     <script src="js/edit.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCO1V4ilzKx8wxo6fJ0QgIskky6lcUUhSc"></script>
 </html>
