--- a/edit.html
+++ b/edit.html
@@ -22,8 +22,12 @@
         </nav>
     </header>
     <div id="backstagePoster" class="backstage_poster">
+        <div>
             <p>房屋刊登</p>
+            <p id="houseTitle"></p>
         </div>
+       
+    </div>
     <section id="backstage" class="backstage">
         
         <div id='titleContainer' class="title_container">
