--- a/rental.html
+++ b/rental.html
@@ -65,9 +65,10 @@
     <script src="./js/common.js"></script>
     <script src="./js/login.js"></script>
     <script src="./js/rental.js"></script>
-    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
-    </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCO1V4ilzKx8wxo6fJ0QgIskky6lcUUhSc&callback=initMap"
-    async defer></script>
+    
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCO1V4ilzKx8wxo6fJ0QgIskky6lcUUhSc&libraries=places&callback=initAutocomplete"
+         async defer></script>
+         <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
+         </script>
 </html>
     
