--- a/edit.html
+++ b/edit.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     
     <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase.js"></script>
-    <script src="./js/firebase.js"></script>
+    <script src="./src/firebase.js"></script>
 <!--    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-storage.js"></script>-->
 </head>
 <body id="body">
@@ -221,9 +221,9 @@
 <footer id="footer">
     
 </footer>
-    <script src="js/lib.js"></script>
-    <script src="js/common.js"></script>
-    <script src="js/login.js"></script>
-    <script src="js/edit.js"></script>
+    <script src="src/lib.js"></script>
+    <script src="src/common.js"></script>
+    <script src="src/login.js"></script>
+    <script src="src/edit.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCO1V4ilzKx8wxo6fJ0QgIskky6lcUUhSc"></script>
 </html>
