--- a/house.html
+++ b/house.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     
     <script src="https://www.gstatic.com/firebasejs/6.0.2/firebase.js"></script>
-    <script src="./js/firebase.js"></script>
+    <script src="./src/firebase.js"></script>
 </head>
 <body id="body">
     <header>
@@ -162,8 +162,8 @@
 <footer id="footer" class="footer">
     
 </footer>
-    <script src="./js/lib.js"></script>
-    <script src="./js/common.js"></script>
-    <script src="./js/login.js"></script>
-    <script src="./js/house.js"></script>
+    <script src="./src/lib.js"></script>
+    <script src="./src/common.js"></script>
+    <script src="./src/login.js"></script>
+    <script src="./src/house.js"></script>
 </html>
