--- a/house.html
+++ b/house.html
@@ -46,6 +46,15 @@
     </div>
     
 </body>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-145614328-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-145614328-1');
+</script>
     <script src="./src/lib.js"></script>
     <script src="./src/common.js"></script>
     <script src="./src/login.js"></script>
